--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
+    "bootstrap": "^5.3.8",
     "cra-template": "1.2.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
